# CICD

./: .gitignore  Dockerfile  README.MD  app.py  dvc.yaml  flake.nix  params.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: mlops.yaml
data/raw/: breast_cancer_v1.csv.dvc
models/: scaler.pkl
src/: data_ingestion.py  evaluate.py  preprocess.py  train.py
