[project]
name = "cicd"
version = "0.1.0"
description = "CI/CD exmaple"
authors = [
    {name = "elango-ela",email = "elango@example.com"},
    {name = "null-proto",email = "relayx@duck.com"}
]
license = { text = "BSD"}
readme = "README.md"
requires-python = ">=3.11,<=3.14"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "joblib (>=1.5.3,<2.0.0)",
    "dvc (>=3.66.1,<4.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "dvc[s3] (>=3.66.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
